# EmbeddedDeformation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Deformation  Fx_data.txt  LICENSE  Makefile  README.md  a.txt  camera.cpp  camera.h  cmake_install.cmake  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  plot.py  resource_manager.cpp  resource_manager.h  test.cpp
animation/: animateTargetFunction.cpp  animateTargetFunction.h
benchmark/: cat_all_measure_time.txt  cat_front_paw_measure_time.txt  cat_head_measure_time.txt  cat_measure_time.txt  cat_rear_paw_measure_time.txt  cat_tail_measure_time.txt  giraffe_all_measure_time.txt  giraffe_measure_time.txt
common/: GaussNewtonSolver.h  JSONReader.h  model.h  param.h  residualFunction.h
docs/: Embedded Deformation for Shape Manipulation.md  Example-based elastic material.md  To-do-List.md  a.out  data.txt  demo  one_dim_spring.cc  plot.py
graph/: boundingObject.cpp  boundingObject.h  deformGraph.cpp  deformGraph.h  deformTargetFunction.cpp  deformTargetFunction.h  distCompare.h  graphVertex.cpp  graphVertex.h  graphvertex.cpp  graphvertex.h  kdnode.cpp  kdnode.h  kdtree.cpp  kdtree.h  model.h  node.cpp  node.h
models/cat/: cat.224 (copy).sample  cat.obj.mtl  cat.sample  cat.sample100  count.cpp
models/giraffe/: giraffe.400.sample  giraffe.dae  giraffe.sample
models/hockey_stick/: hockey_stick.sample
models/json/: cat.json  giraffe.json  hockey_stick.json  wand.json  wand_v.json
models/rabbit/: a.out  count  (+2 more)
optimization/: GaussNewtonOptimizer.cpp  GaussNewtonOptimizer.h  targetFunction.cpp  targetFunction.h
(+20 files in other folders)
